--- a/ex001.html
+++ b/ex001.html
@@ -6,11 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>동요3종세트</title>
 
+    <!-- 스타일시트작성 -->
+
+    <style>
+
+        * {color: green;}
+        h1 {color: red;}
+        p {color: blueviolet;}
+        #san {font-weight: 600;}
+        .song {background-color: aqua;}
+        .rab {background-color: aquamarine;}
+        b,ins,i {color: blue;}
+    </style>
+
 </head>
 <body>
     <h1>동요모음집</h1>
     <h2><a href="https://terms.naver.com/entry.naver?docId=3653210&cid=59416&categoryId=59416" target="_blank">산토끼</a></h2>
-    <p>
+    <p id="san" class="song rab">
         <b>산토끼</b>토끼야<br>
         <ins>어디를 가느냐</ins><br>
         <br>
@@ -22,7 +35,7 @@
     </p>
 <hr>
     <h2><a href="https://vibe.naver.com/track/27345147" target="_blank">송아지</a></h2>
-    <p>
+    <p id="san" class="song">
         <b>송아지</b>송아지<br>
         <ins>얼룩송아지</ins><br>
         <br>
@@ -35,7 +48,7 @@
 
     <hr>
     <h2><a href="https://terms.naver.com/entry.naver?docId=3615241&cid=59416&categoryId=59417" target="_blank">비행기</a></h2>
-    <p>
+    <p id="san" class="song">
         <b>떴다 떴다</b> 비행기<br>
         <ins>날아라 날아라</ins><br>
         <br>
